[gd_scene load_steps=9 format=2]

[ext_resource path="res://screens/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/blueBackground.png" type="Texture" id=2]
[ext_resource path="res://sprites/texts/gameQuestion.png" type="Texture" id=3]
[ext_resource path="res://sprites/images/square.png" type="Texture" id=4]
[ext_resource path="res://sprites/images/3Porquinhos/Parte1.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/3Porquinhos/Parte12.png" type="Texture" id=6]
[ext_resource path="res://sprites/texts/Proximo.png" type="Texture" id=7]
[ext_resource path="res://sprites/images/check.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
position = Vector2( 311.46, 479.467 )
script = ExtResource( 1 )

[node name="BlueBackground" type="ColorRect" parent="."]
margin_left = -315.0
margin_top = -482.0
margin_right = 290.0
margin_bottom = 547.0
color = Color( 0.611765, 0.862745, 0.972549, 0.905882 )

[node name="paintedBlueBackground" type="Sprite" parent="."]
position = Vector2( -11.3052, 38.4374 )
scale = Vector2( 1.49935, 0.995904 )
texture = ExtResource( 2 )

[node name="text" type="Sprite" parent="."]
position = Vector2( -12.1847, -428.606 )
scale = Vector2( 0.243885, 0.243885 )
texture = ExtResource( 3 )

[node name="select1" type="TouchScreenButton" parent="."]
position = Vector2( -267.759, -225.003 )
scale = Vector2( 0.638631, 0.638631 )
normal = ExtResource( 4 )

[node name="select2" type="TouchScreenButton" parent="."]
position = Vector2( -268.128, 237.415 )
scale = Vector2( 0.638631, 0.638631 )
normal = ExtResource( 4 )

[node name="option1" type="TouchScreenButton" parent="."]
position = Vector2( -182.415, -377.868 )
scale = Vector2( 0.371742, 0.371742 )
normal = ExtResource( 5 )

[node name="option2" type="TouchScreenButton" parent="."]
position = Vector2( -182.415, 57.4545 )
scale = Vector2( 0.371742, 0.371742 )
normal = ExtResource( 6 )

[node name="next" type="TouchScreenButton" parent="."]
position = Vector2( -69.2485, 488.39 )
scale = Vector2( 0.2531, 0.2531 )
normal = ExtResource( 7 )

[node name="check1" type="Sprite" parent="."]
visible = false
position = Vector2( -233.827, -195.342 )
scale = Vector2( 0.198953, 0.198953 )
texture = ExtResource( 8 )

[node name="check2" type="Sprite" parent="."]
visible = false
position = Vector2( -233.827, 268.746 )
scale = Vector2( 0.198953, 0.198953 )
texture = ExtResource( 8 )

[connection signal="pressed" from="select1" to="." method="_on_select1_pressed"]
[connection signal="pressed" from="select2" to="." method="_on_select2_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
